automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!-- input feild container-->
 
 <section class="input-container">
-  <class="input-box">
+  <div class="input-box">
   <!-- first name-->
   <p class="insert"></p>
   
@@ -55,7 +55,7 @@
   
   <!-- location-->
   <p class="insert"></p>
-  </class>
+  </div>
 </section>
 
 
