automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 </section>
 <!-- input feild container-->
 
-<section class="input-container">
+<section id="input-container">
   <div class="input-box">
   <!-- first name-->
   <p class="insert"></p>
