automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 </form> 
 </section>  
 
-<section>
+<!--<section>
   <img src="https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png" alt="Pineapple" 
   style="width:20%;margin-right:300px;">
-</section>
+</section>-->
 <!-- input feild container-->
 
 <section id="input-container">
