--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
 <!-- -->
-<section>
+<section class=left>
 <form action="/action_page.php">
    First name:<br>
   <input type="text" name="firstname" value="">
@@ -58,13 +58,13 @@
 </form> 
 </section>  
 
-<!--<section>
+<!--<section> image 
   <img src="https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png" alt="Pineapple" 
   style="width:20%;margin-right:300px;">
 </section>-->
 <!-- input feild container-->
 
-<section id="input-container">
+<section class="right" id="input-container">
   <div class="input-box">
   <!-- first name-->
   <p class="insert"></p>
