automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 
 <!-- -->
+<section class= full-container>
 <section class=left>
 <form action="/action_page.php">
    First name:<br>
@@ -81,8 +82,8 @@
   <!-- location-->
   <p class="insert"></p>
   </div>
+ </section>
 </section>
-
 <!-- -->
 
 <footer> 
