automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
 <!-- -->
 <section class="full-container">
-<section class=left>
+  
+<div class=left>
 <form action="/action_page.php">
    First name:<br>
   <input type="text" name="firstname" value="">
@@ -55,7 +56,6 @@
   <input type="text" name="location" value="">
   <br>
   <input type="submit" value="Submit">
-  
 </form> 
 </section>  
 
