--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
 
 
 
-<!-- -->
+<!-- full-container -->
 <section class="full-container">
-  
+ 
+
+<!-- left-->  
 <div class=left>
 <form action="/action_page.php">
    First name:<br>
@@ -57,7 +59,7 @@
   <br>
   <input type="submit" value="Submit">
 </form> 
-</section>  
+</div>  
 
 <!--<section> image 
   <img src="https://i.pinimg.com/originals/71/d8/28/71d828c3ca9135c1e810021366651726.png" alt="Pineapple" 
@@ -65,7 +67,8 @@
 </section>-->
 <!-- input feild container-->
 
-<section class="right" id="input-container">
+<div class="right">
+  <div id="input-container">
   <div class="input-box">
   <!-- first name-->
   <p class="insert"></p>
@@ -82,8 +85,9 @@
   <!-- location-->
   <p class="insert"></p>
   </div>
- </section>
-</section>
+  </div>
+  </div>
+</section>  
 <!-- -->
 
 <footer> 
